--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,17 +30,16 @@ requirements:
     - humanfriendly >=8.2,<11
     - numpy >=1.20.0,<2
     - pandas >=1.1.3,<2
-    - pomegranate >=0.14.3,<0.15
     - psutil >=5.7,<6
     - scikit-learn >=0.24,<2
     - scipy >=1.5.4,<2
     - tabulate >=0.8.3,<0.9
-    - pytorch >=1.8.0,<2
+    - pytorch >=1.8.0,<3
     - tqdm >=4.15,<5
     - xlsxwriter >=1.2.8,<4
     - rdt >=1.3.0,<2.0
-    - sdmetrics >=0.9.0,<1.0
-    - sdv >=0.18.0
+    - sdmetrics >=0.9.1,<1.0
+    - sdv >=1.0.0,<2.0
 
 test:
   imports:
