--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - pip
   run:
     - python >=3.7,<3.11
+    - anyio
     - appdirs >=1.3,<2
     - boto3 >=1.15.0,<2
     - botocore >=1.18,<2
