--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,23 +24,24 @@ requirements:
   run:
     - python >=3.8,<3.13
     - anyio
-    - appdirs >=1.3,<2
+    - appdirs >=1.3
     - boto3 >=1.28,<2
     - botocore >=1.31,<2
-    - compress-pickle >=1.2.0,<3
-    - humanfriendly >=8.2,<11
+    - cloudpickle >=2.1.0
+    - compress-pickle >=1.2.0
+    - humanfriendly >=8.2
     - numpy >=1.21.0,<2
-    - pandas >=1.4.0,<2
-    - psutil >=5.7,<6
-    - scikit-learn >=1.0.2,<2
-    - scipy >=1.7.3,<2
+    - pandas >=1.4.0
+    - psutil >=5.7
+    - scikit-learn >=1.0.2
+    - scipy >=1.7.3
     - tabulate >=0.8.3,<0.9
-    - pytorch >=1.9.0,<3
-    - tqdm >=4.29,<5
-    - xlsxwriter >=1.2.8,<4
-    - rdt >=1.12.1,<2.0
-    - sdmetrics >=0.14.1,<1.0
-    - sdv >=1.13.1,<2.0
+    - pytorch >=1.9.0
+    - tqdm >=4.29
+    - xlsxwriter >=1.2.8
+    - rdt >=1.12.1
+    - sdmetrics >=0.14.1
+    - sdv >=1.13.1
 
 test:
   imports:
