--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,27 +21,28 @@ requirements:
     - python {{ python_min }}
     - pytest-runner >=2.11.1
     - pip
+    - setuptools
   run:
-    - python >={{ python_min }},<3.13
+    - python >={{ python_min }},<3.14
     - anyio
     - appdirs >=1.3
     - boto3 >=1.28,<2
     - botocore >=1.31,<2
     - cloudpickle >=2.1.0
     - compress-pickle >=1.2.0
-    - humanfriendly >=8.2
-    - numpy >=1.21.6,<2
+    - humanfriendly >=10.0
+    - numpy >=1.22.2,<2
     - pandas >=1.4.0
     - psutil >=5.7
     - scikit-learn >=1.0.2
     - scipy >=1.7.3
     - tabulate >=0.8.3,<0.9
-    - pytorch >=1.12.1
+    - pytorch >=2.6.0
     - tqdm >=4.66.3
     - xlsxwriter >=1.2.8
-    - rdt >=1.13.1
-    - sdmetrics >=0.17.0
-    - sdv >=1.17.2
+    - rdt >=1.17.0
+    - sdmetrics >=0.20.1
+    - sdv >=1.21.0
 
 test:
   imports:
