--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,10 +30,12 @@ requirements:
     - botocore >=1.31,<2
     - cloudpickle >=2.1.0
     - compress-pickle >=1.2.0
+    - google-auth >=2.0.0
+    - google-cloud-compute >=1.0.0
     - humanfriendly >=10.0
     - numpy >=1.22.2,<2
     - openpyxl >=3.1.2
-    - pandas >=1.4.0
+    - pandas >=1.4.0,<3
     - psutil >=5.7
     - scikit-learn >=1.0.2
     - scipy >=1.7.3
